tests/good/test600.tig
let
  type iarr = array of int
  var arr := iarr [20] of 0
  var i := range(0,1)
  var idx := 0
in
  if i = 0 then
    idx := range(0,10)
  else
    idx := range(11,19);
  print_int(arr[i])
end
