tests/bad/bad20.tig
let
  type iarr = array of int
  var arr := iarr [20] of 0
  var idx := 0
in
  if range(0,1) then
    idx := 0
  else
    idx := 20;  
  print_int(arr[idx])
end
